change styles, delete buttons

--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
          <div class="center-info">
              <h1>Javascript</h1>
          </div>
-         <div class="center-buttons">
+         <!-- <div class="center-buttons">
              <ul class="buttons-page">
                     <li><button><span>Languages</span></button></li>
                     <li><a>Edit</a></li>
                     <li><button><span>Advanced</span></button></li>
              </ul>
 
-         </div>
+         </div> -->
      </div>
      <div class="container-aside-article">
      <aside class="column-aside">
