Se agregan links redirigiendo a páginas de funciones

--- a/index.html
+++ b/index.html
@@ -57,14 +57,21 @@
                     <h2>Related topics</h2>
                     <p><strong>JavaScript</strong></p>
                     <ul class="aside-list">
-                        <li><a href="" target="_blank" rel="noopener noreferrer">fakeForEach</a></li>
-                        <li><a href="" target="_blank" rel="noopener noreferrer">fakeSome</a></li>
-                        <li><a href="" target="_blank" rel="noopener noreferrer">fakeEvery</a></li>
-                        <li><a href="" target="_blank" rel="noopener noreferrer">fakeFind</a></li>
-                        <li><a href="" target="_blank" rel="noopener noreferrer">fakeIncludes</a></li>
-                        <li><a href="" target="_blank" rel="noopener noreferrer">fakeMap</a></li>
-                        <li><a href="" target="_blank" rel="noopener noreferrer">fakeFilter</a></li>
-                        <li><a href="" target="_blank" rel="noopener noreferrer">fakeReduce</a></li>
+                        <li><a href="functions/fakeForEach.html" target="_blank"
+                                rel="noopener noreferrer">fakeForEach</a></li>
+                        <li><a href="functions/fakeSome.html" target="_blank" rel="noopener noreferrer">fakeSome</a>
+                        </li>
+                        <li><a href="functions/fakeEvery.html" target="_blank" rel="noopener noreferrer">fakeEvery</a>
+                        </li>
+                        <li><a href="functions/fakeFind.html" target="_blank" rel="noopener noreferrer">fakeFind</a>
+                        </li>
+                        <li><a href="functions/fakeIncludes.html" target="_blank"
+                                rel="noopener noreferrer">fakeIncludes</a></li>
+                        <li><a href="functions/fakeMap.html" target="_blank" rel="noopener noreferrer">fakeMap</a></li>
+                        <li><a href="functions/fakeFilter.html" target="_blank" rel="noopener noreferrer">fakeFilter</a>
+                        </li>
+                        <li><a href="functions/fakeReduce.html" target="_blank" rel="noopener noreferrer">fakeReduce</a>
+                        </li>
                     </ul>
                 </aside>
                 <article class="info-text">
