Se modifica descripcion de parámetro

--- a/functions/fakeFilter.html
+++ b/functions/fakeFilter.html
@@ -44,7 +44,7 @@
                     </dt>
                     <dd class="param-description">Función que comprueba cada elemento del array para ver si cumple la
                         condición (también llamada predicado). Retorna true si el elemento la cumple o en caso contrario
-                        retornará false. Acepta tres parámetros:
+                        retornará false.
                     </dd>
                     <dt>
                         <code class="code-params">currentValue</code>
