--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 <body>
     <header id="header-main" class="main-header">
         <div class="logo-box">
-            <a href="index.html" class="logo" rel="noopener noreferrer"></a>
-            <img src="img/logo_v2.png" alt="logo de mdn fake" title="logo" />
+            <a href="index.html" class="logo" rel="noopener noreferrer">
+                <img src="img/logo_v2.png" alt="logo de mdn fake" title="logo" />
+            </a>
         </div>
         <nav class="nav-container">
             <ul class="list-menu">
@@ -35,7 +36,7 @@
             </ul>
         </div>
         <div class="search">
-            <input type="search">
+            <img src="img/search.png">
         </div>
     </header>
     <main>
