Agrega header a las páginas de funciones

--- a/functions/fakeReduce.html
+++ b/functions/fakeReduce.html
@@ -8,6 +8,36 @@
 </head>
 
 <body>
+  <!-- header -->
+  <header id="header-main" class="main-header">
+    <div class="logo-box">
+      <a href="../index.html" class="logo" rel="noopener noreferrer">
+        <img src="../img/logo_v2.png" alt="logo de mdn fake" title="logo" />
+      </a>
+    </div>
+    <nav class="nav-container">
+      <ul class="list-menu">
+        <li class="list-nav"><a href="" rel="noopener noreferrer">Tecnologías</a></li>
+        <li class="list-nav"><a href="" rel="noopener noreferrer">Referencias & Guias</a></li>
+        <li class="list-nav"><a href="" rel="noopener noreferrer">Feedback</a></li>
+      </ul>
+
+    </nav>
+    <div class="nav-login">
+      <ul class="list-login">
+        <li class="login-box">
+          <div class="login">
+            <a href="" rel="noopener noreferrer">Sign in</a>
+          </div>
+        </li>
+      </ul>
+    </div>
+    <div class="search">
+      <img src="../img/search.png">
+    </div>
+  </header>
+  <!-- header -->
+
   <h1>fakeReduce</h1>
   <div class="container-aside-article">
     <aside class="column-aside">
