add new logos and add urls of reduce, some, and find

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  <header id="header-main" class="main-header">
      <div class="logo-box" >
      <a href="index.html" class="logo"rel="noopener noreferrer"></a>
-     <img src="img/logo_v2.png" alt="logo de mdn fake" title="logo" />
+     <img src="img/logo_v2_negro.png" alt="logo de mdn fake" title="logo" />
     </div>
      <nav class="nav-container">
          <ul class="list-menu">
@@ -57,13 +57,13 @@
          <p><strong>JavaScript</strong></p>
          <ul class="aside-list">
              <li><a href="" target="_blank" rel="noopener noreferrer">forEach</a></li>
-             <li><a href="" target="_blank" rel="noopener noreferrer">some</a></li>
+             <li><a href="functions/fakeSome.html" target="_blank" rel="noopener noreferrer">some</a></li>
              <li><a href="" target="_blank" rel="noopener noreferrer">every</a></li>
-             <li><a href="" target="_blank" rel="noopener noreferrer">find</a></li>
+             <li><a href="functions/fakeFind.html" target="_blank" rel="noopener noreferrer">find</a></li>
              <li><a href="" target="_blank" rel="noopener noreferrer">includes</a></li>
              <li><a href="" target="_blank" rel="noopener noreferrer">map</a></li>
              <li><a href="" target="_blank" rel="noopener noreferrer">filter</a></li>
-             <li><a href="" target="_blank" rel="noopener noreferrer">reduce</a></li>
+             <li><a href="functions/fakeReduce.html" target="_blank" rel="noopener noreferrer">reduce</a></li>
          </ul>
      </aside>
      <article class="info-text">
@@ -78,7 +78,7 @@
      <div class="box-footer-center">
          <div class="logo-footer">
                 <a href="index.html" class="logo"rel="noopener noreferrer"></a>
-                <img src="img/logo_v2.png" alt="logo de mdn fake" title="logo" />
+                <img src="img/logo_v2_blanco.png" alt="logo de mdn fake" title="logo" />
          </div>
          <div class="info-content-footer">
                 <p>© 2005-2019 Mozilla and individual contributors</p>
