--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
+    <script defer src="https://use.fontawesome.com/releases/v5.5.0/js/all.js" integrity="sha384-GqVMZRt5Gn7tB9D9q7ONtcp4gtHIUEW/yG7h98J7IpE3kpi+srfFyyB/04OV6pG0" crossorigin="anonymous"></script>
     <script src='main.js'></script>
 </head>
 <body>
@@ -28,13 +29,16 @@
              <li class="login-box">
                  <div class="login">
                      <a href="" rel="noopener noreferrer">Sign in</a>
+                     <i class="fab fa-github"></i>
+                     
 
                  </div>
              </li>
          </ul>
      </div>
      <div class="search">
-         <input type="search"> 
+         <input type="search" > 
+         <button class="button-search"><i class="fas fa-search"></i></button>
      </div>
  </header>
  <main>
