--- a/functions/fakeForEach.html
+++ b/functions/fakeForEach.html
@@ -52,10 +52,13 @@
           <h2>Ejemplo</h2>
           <h3>Mostrar cada elemento del array</h3>
           <div class="syntaxbox">
-            <p><code>;</code></p>
-            <p><code></code></p>
-            <p><code></code></p>
-            <p><code></code></p>
+            <p><code>let array = ['a', 'b', 'c']; </code></p>
+            <p><code>fakeForEach(array, function(element){</code></p>
+            <p><code>  console.log(element);</code></p>
+            <p><code>})</code></p>
+            <p><code> // output: "a" </code></p> 
+            <p><code> // output: "b" </code></p> 
+            <p><code> // output: "c" </code></p>    
           </div>
         </div>
       </article>
