--- a/functions/fakeIncludes.html
+++ b/functions/fakeIncludes.html
@@ -50,12 +50,12 @@
         </section>
         <div>
           <h2>Ejemplo</h2>
-          <h3></h3>
+          <h3>Usando Includes</h3>
           <div class="syntaxbox">
-            <p><code>;</code></p>
-            <p><code></code></p>
-            <p><code></code></p>
-            <p><code></code></p>
+            <p><code>let array = 'To be, or not to be, that is the question.';</code></p>
+            <p><code>const element= 'question'</code></p>
+            <p><code>fakeinclude(array, element);</code></p>
+            <p><code> >> True </code></p>
           </div>
         </div>
       </article>
