--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header id="header-main" class="main-header">
         <div class="logo-box">
             <a href="index.html" class="logo" rel="noopener noreferrer">
-                <img src="img/logo_v2.png" alt="logo de mdn fake" title="logo" />
+                <img src="img/logo_v2_negro.png" alt="logo de mdn fake" title="logo" />
             </a>
         </div>
         <nav class="nav-container">
@@ -40,19 +40,12 @@
         </div>
     </header>
     <main>
-        <div class="document-info">
-            <div class="center-info">
+        <section class="document-info">
+            <header class="center-info">
                 <h1>Javascript</h1>
-            </div>
-            <!-- <div class="center-buttons">
-             <ul class="buttons-page">
-                    <li><button><span>Languages</span></button></li>
-                    <li><a>Edit</a></li>
-                    <li><button><span>Advanced</span></button></li>
-             </ul>
-         </div> -->
-        </div>
-        <div class="container">
+            </header>
+        </section>
+        <section class="container">
             <div class="container-aside-article">
                 <aside class="column-aside">
                     <h2>Related topics</h2>
@@ -102,13 +95,13 @@
                         programming languages have very different syntax, semantics, and uses.</p>
                 </article>
             </div>
-        </div>
+        </section>
     </main>
     <footer class="nav-footer">
-        <div class="box-footer-center">
+        <article class="box-footer-center">
             <div class="logo-footer">
                 <a href="index.html" class="logo" rel="noopener noreferrer"></a>
-                <img src="img/logo_v2.png" alt="logo de mdn fake" title="logo" />
+                <img src="img/logo_v2_blanco.png" alt="logo de mdn fake" title="logo" />
             </div>
             <div class="info-content-footer">
                 <p>© 2005-2019 Mozilla and individual contributors</p>
@@ -116,8 +109,8 @@
                         licenses.</a>
                 </p>
             </div>
-        </div>
-        <div class="footer-mdn">
+        </article>
+        <section class="footer-mdn">
             <h2 class="footer-title">MDN</h2>
             <ul class="list-footer">
                 <li><a href="" target="_blank" rel="noopener noreferrer">Tecnologías Web</a></li>
@@ -127,9 +120,8 @@
                 <li class="footer-social"><a href="" target="_blank" rel="noopener noreferrer">Twitter</a></li>
                 <li class="footer-social"><a href="" target="_blank" rel="noopener noreferrer">Github</a></li>
             </ul>
-
-        </div>
-        <div class="footer-mozilla">
+        </section>
+        <section class="footer-mozilla">
             <h2 class="footer-title">Mozilla</h2>
             <ul class="list-footer">
                 <li><a href="" target="_blank" rel="noopener noreferrer">Sobre nosotros</a></li>
@@ -138,13 +130,7 @@
                 <li class="footer-social"><a href="" rel="noopener noreferrer">Twitter</a></li>
                 <li class="footer-social"><a href="" rel="noopener noreferrer">Instagram</a></li>
             </ul>
-
-        </div>
-        <!-- <div class="info-content-footer">
-            <p>© 2005-2019 Mozilla and individual contributors</p>
-            <p> Content is available under <a href="" target="_blank" rel="noopener noreferrer">these licenses.</a></p>
-        </div> -->
-        </div>
+        </section>
     </footer>
 </body>
 
