--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
     <script src='app.js'></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -20,9 +21,9 @@
         </div>
         <nav class="nav-container">
             <ul class="list-menu">
-                <li class="list-nav"><a href="" rel="noopener noreferrer">Tecnologías</a></li>
-                <li class="list-nav"><a href="" rel="noopener noreferrer">Referencias & Guias</a></li>
-                <li class="list-nav"><a href="" rel="noopener noreferrer">Feedback</a></li>
+                <li class="list-nav"><a href="" rel="noopener noreferrer">Tecnologías <i class="fas fa-caret-down"></i></a></li>
+                <li class="list-nav"><a href="" rel="noopener noreferrer">Referencias & Guias <i class="fas fa-caret-down"></i></a></li>
+                <li class="list-nav"><a href="" rel="noopener noreferrer">Feedback <i class="fas fa-caret-down"></i></a></li>
             </ul>
 
         </nav>
@@ -30,7 +31,8 @@
             <ul class="list-login">
                 <li class="login-box">
                     <div class="login">
-                        <a href="" rel="noopener noreferrer">Sign in</a>
+                        <a href="" rel="noopener noreferrer" style="font-size: 18px">Sign in
+                        <i class="fab fa-github"></i></a>
                     </div>
                 </li>
             </ul>
