add icons social footer

--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
                 <li><a href="" target="_blank" rel="noopener noreferrer">Aprender Desarrollo Web</a></li>
                 <li><a href="" target="_blank" rel="noopener noreferrer">Sobre MDN</a></li>
                 <li><a href="" target="_blank" rel="noopener noreferrer">Feedback</a></li>
-                <li class="footer-social"><a href="" target="_blank" rel="noopener noreferrer">Twitter</a></li>
-                <li class="footer-social"><a href="" target="_blank" rel="noopener noreferrer">Github</a></li>
+                <li class="footer-social"><a href="" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a></li>
+                <li class="footer-social"><a href="" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a></li>
             </ul>
         </section>
         <section class="footer-mozilla">
@@ -129,8 +129,8 @@
                 <li><a href="" target="_blank" rel="noopener noreferrer">Sobre nosotros</a></li>
                 <li><a href="" target="_blank" rel="noopener noreferrer">Contactanos</a></li>
                 <li><a href="" target="_blank" rel="noopener noreferrer">Firefox</a></li>
-                <li class="footer-social"><a href="" rel="noopener noreferrer">Twitter</a></li>
-                <li class="footer-social"><a href="" rel="noopener noreferrer">Instagram</a></li>
+                <li class="footer-social"><a href="" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a></li>
+                <li class="footer-social"><a href="" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a></li>
             </ul>
         </section>
     </footer>
