change header for function html

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
             </ul>
         </div>
         <div class="search">
-            <img src="img/search.png">
+                <a href="" rel="noopener noreferrer" class="search-a"><i class="fas fa-search fa-2x"></i></a> 
+            <!-- <img src="img/search.png"> -->
         </div>
     </header>
     <main>
