--- a/functions/fakeEvery.html
+++ b/functions/fakeEvery.html
@@ -4,36 +4,40 @@
     <meta charset="UTF-8" />
     <title>fakeEvery</title>
     <link rel="stylesheet" href="../styles.css" />
+    <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
   </head>
 
   <body>
     <!-- header -->
     <header id="header-main" class="main-header">
       <div class="logo-box">
-        <a href="../index.html" class="logo" rel="noopener noreferrer">
-          <img src="../img/logo_v2.png" alt="logo de mdn fake" title="logo" />
-        </a>
+          <a href="../index.html" class="logo" rel="noopener noreferrer">
+              <img src="../img/logo_v2_negro.png" alt="logo de mdn fake" title="logo" />
+          </a>
       </div>
       <nav class="nav-container">
-        <ul class="list-menu">
-          <li class="list-nav"><a href="" rel="noopener noreferrer">Tecnologías</a></li>
-          <li class="list-nav"><a href="" rel="noopener noreferrer">Referencias & Guias</a></li>
-          <li class="list-nav"><a href="" rel="noopener noreferrer">Feedback</a></li>
-        </ul>
+          <ul class="list-menu">
+              <li class="list-nav"><a href="" rel="noopener noreferrer">Tecnologías <i class="fas fa-caret-down"></i></a></li>
+              <li class="list-nav"><a href="" rel="noopener noreferrer">Referencias & Guias <i class="fas fa-caret-down"></i></a></li>
+              <li class="list-nav"><a href="" rel="noopener noreferrer">Feedback <i class="fas fa-caret-down"></i></a></li>
+          </ul>
+
       </nav>
       <div class="nav-login">
-        <ul class="list-login">
-          <li class="login-box">
-            <div class="login">
-              <a href="" rel="noopener noreferrer">Sign in</a>
-            </div>
-          </li>
-        </ul>
+          <ul class="list-login">
+              <li class="login-box">
+                  <div class="login">
+                      <a href="" rel="noopener noreferrer" style="font-size: 18px">Sign in
+                      <i class="fab fa-github"></i></a>
+                  </div>
+              </li>
+          </ul>
       </div>
       <div class="search">
-        <img src="../img/search.png" />
+              <a href="" rel="noopener noreferrer" class="search-a"><i class="fas fa-search fa-2x"></i></a> 
+          <!-- <img src="img/search.png"> -->
       </div>
-    </header>
+  </header>
     <!-- header -->
 
     <h1>fakeEvery</h1>
