--- a/functions/fakeIncludes.html
+++ b/functions/fakeIncludes.html
@@ -4,9 +4,39 @@
     <meta charset="UTF-8" />
     <title>fakeIncludes</title>
     <link rel="stylesheet" href="../styles.css" />
+    <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
   </head>
 
   <body>
+      <header id="header-main" class="main-header">
+          <div class="logo-box">
+              <a href="../index.html" class="logo" rel="noopener noreferrer">
+                  <img src="../img/logo_v2_negro.png" alt="logo de mdn fake" title="logo" />
+              </a>
+          </div>
+          <nav class="nav-container">
+              <ul class="list-menu">
+                  <li class="list-nav"><a href="" rel="noopener noreferrer">Tecnologías <i class="fas fa-caret-down"></i></a></li>
+                  <li class="list-nav"><a href="" rel="noopener noreferrer">Referencias & Guias <i class="fas fa-caret-down"></i></a></li>
+                  <li class="list-nav"><a href="" rel="noopener noreferrer">Feedback <i class="fas fa-caret-down"></i></a></li>
+              </ul>
+  
+          </nav>
+          <div class="nav-login">
+              <ul class="list-login">
+                  <li class="login-box">
+                      <div class="login">
+                          <a href="" rel="noopener noreferrer" style="font-size: 18px">Sign in
+                          <i class="fab fa-github"></i></a>
+                      </div>
+                  </li>
+              </ul>
+          </div>
+          <div class="search">
+                  <a href="" rel="noopener noreferrer" class="search-a"><i class="fas fa-search fa-2x"></i></a> 
+              <!-- <img src="img/search.png"> -->
+          </div>
+      </header>
     <h1>fakeIncludes</h1>
     <div class="container-aside-article">
       <aside class="column-aside">
