--- a/functions/fakeIncludes.html
+++ b/functions/fakeIncludes.html
@@ -43,11 +43,12 @@
         <p class="aside-title">Otros métodos</p>
         <ul class="aside-list">
           <li><a href="fakeForEach.html" target="_blank" rel="noopener noreferrer">fakeForEach</a></li>
-          <li><a href="fakeReduce.html" target="_blank" rel="noopener noreferrer">fakeReduce</a></li>
+          <li><a href="functions/fakeSome.html" target="_blank" rel="noopener noreferrer">fakeSome</a></li>
           <li><a href="fakeEvery.html" target="_blank" rel="noopener noreferrer">fakeEvery</a></li>
           <li><a href="fakeFind.html" target="_blank" rel="noopener noreferrer">fakeFind</a></li>
           <li><a href="fakeMap.html" target="_blank" rel="noopener noreferrer">fakeMap</a></li>
           <li><a href="fakeFilter.html" target="_blank" rel="noopener noreferrer">fakeFilter</a></li>
+          <li><a href="fakeReduce.html" target="_blank" rel="noopener noreferrer">fakeReduce</a></li>
         </ul>
       </aside>
       <article>
