--- a/functions/fakeForEach.html
+++ b/functions/fakeForEach.html
@@ -42,7 +42,7 @@
       <aside class="column-aside">
         <p class="aside-title">Otros métodos</p>
         <ul class="aside-list">
-          <li><a href="functions/fakeSome.html" target="_blank" rel="noopener noreferrer">fakeSome</a></li>
+          <li><a href="fakeSome.html" target="_blank" rel="noopener noreferrer">fakeSome</a></li>
           <li><a href="fakeEvery.html" target="_blank" rel="noopener noreferrer">fakeEvery</a></li>
           <li><a href="fakeFind.html" target="_blank" rel="noopener noreferrer">fakeFind</a></li>
           <li><a href="fakeIncludes.html" target="_blank" rel="noopener noreferrer">fakeIncludes</a></li>
