--- a/functions/fakeIncludes.html
+++ b/functions/fakeIncludes.html
@@ -43,7 +43,7 @@
         <p class="aside-title">Otros métodos</p>
         <ul class="aside-list">
           <li><a href="fakeForEach.html" target="_blank" rel="noopener noreferrer">fakeForEach</a></li>
-          <li><a href="functions/fakeSome.html" target="_blank" rel="noopener noreferrer">fakeSome</a></li>
+          <li><a href="fakeSome.html" target="_blank" rel="noopener noreferrer">fakeSome</a></li>
           <li><a href="fakeEvery.html" target="_blank" rel="noopener noreferrer">fakeEvery</a></li>
           <li><a href="fakeFind.html" target="_blank" rel="noopener noreferrer">fakeFind</a></li>
           <li><a href="fakeMap.html" target="_blank" rel="noopener noreferrer">fakeMap</a></li>
