--- a/functions/fakeForEach.html
+++ b/functions/fakeForEach.html
@@ -5,6 +5,9 @@
     <title>fakeForEach</title>
     <link rel="stylesheet" href="../styles.css" />
     <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.8/highlight.min.js"> </script>
+    <script>hljs.initHighlightingOnLoad();</script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.8/styles/atom-one-light.min.css"> 
   </head>
   <body>
     <header id="header-main" class="main-header">
@@ -81,15 +84,18 @@
         <div>
           <h2>Ejemplo</h2>
           <h3>Mostrar cada elemento del array</h3>
-          <div class="syntaxbox">
-            <p><code>let array = ['a', 'b', 'c']; </code></p>
-            <p><code>fakeForEach(array, function(element){</code></p>
-            <p><code> console.log(element);</code></p>
-            <p><code>})</code></p>
-            <p><code> // output: "a" </code></p>
-            <p><code> // output: "b" </code></p>
-            <p><code> // output: "c" </code></p>
-          </div>
+            <pre>
+              <code class="javascript">
+    let array = ['a', 'b', 'c']; 
+    fakeForEach(array, function(element){         
+    fakeForEach(array, function(element){          
+    console.log(element);       
+    })          
+    // output: "a"
+    // output: "b" 
+    // output: "c" 
+              </code>
+          </pre>
         </div>
       </article>
     </div>
